# Shell

./: CMakeLists.txt  ShellGrammar.g4
runtime/src/: antlr4-common.h
runtime/src/tree/xpath/: XPathWildcardAnywhereElement.h
src/: CommandVisitor.cpp  CommandVisitor.h  IORedirect.h  Pipeline.cpp  Pipeline.h  Sequence.cpp  Sequence.h  SimpleCommand.cpp  SimpleCommand.h  main.cpp
